<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Тревоги</string>
    <string name="filter_name">Фильтр</string>
    <string name="archive_tab_name">Архив</string>
    <string name="curr_tab_name">Текущие</string>
    <string name="options_tab_name">Настройки</string>
    <string name="on_exit_message">Нажмите снова для выхода</string>
    <string name="received">: Получено </string>
    <string name="from">  из </string>
    <string name="servers_not_found">Отсутствуют корректно описанные сервера!</string>
    <string name="servers_not_received">Сервер не отвечает. Занят или недоступен!</string>
    <string name="request_fault">Ошибка запроса!</string>
    <string name="select_start_date">Выберите начальную дату</string>
    <string name="select_end_date">Выберите конечную дату</string>
    <string name="select_start_time">Выберите начальное время</string>
    <string name="select_end_time">Выберите конечное время</string>
    <string name="accept">Применить</string>
    <string name="update">Обновить</string>
    <string name="cancel">Отмена</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="BROADCAST_ARCHIVE">com.proryv.alarmnotification.tabs.archive</string>
    <string name="BROADCAST_CURRENT">com.proryv.alarmnotification.tabs.current</string>
    <string name="BROADCAST_WORKFLOW">com.proryv.alarmnotification.tabs.workflow</string>
    <string name="BROADCAST_SERVERSETTINGS">com.proryv.alarmnotification.serversettings</string>
    <string name="finish">ОКОНЧАНИЕ</string>
    <string name="start">НАЧАЛО</string>
    <string name="date_hint">дд.мм.гггг</string>
    <string name="time_hint">чч:мм</string>
    <string name="all_alarm_selected"><![CDATA[<Выбраны все тревоги>]]></string>
    <string name="alarm_level">Уровень</string>
    <string name="workflow_list">Процессы</string>
    <string name="all_process_selected"><![CDATA[<Выбраны все процессы>]]></string>
    <string name="select_range">Выберите диапазон</string>
    <string name="wait_prev_operation">Дождитесь окончания текущей операции</string>
    <string name="alarm_success_ack">Тревоги успешно квитированы</string>
    <string name="select_alarms_for_ack">Выберите тревоги из активных серверов для квитирования!</string>
    <string name="press_update">Теперь нажмите обновить</string>
    <string name="wcf_result">result</string>
    <string name="wcf_status">status</string>
    <string name="wcf_additional">additional</string>
    <string name="wait_request">Дождитесь повторного запроса</string>
    <string name="active_server_not_found">Не найдены активные сервера</string>
    <string name="server_setting">Настройки сервера</string>
    <string name="you_wona_delete">Хотите удалить сервер?</string>
    <string name="save_server_settings">Сохранить изменения перед выходом?</string>
    <string name="server_address_not_valid">Адрес сервера некорректен!</string>
    <string name="server_name_not_valid">Название сервера некорректено!</string>
    <string name="server_exists">Уже описан сервер с таким адресом</string>
    <string name="set_other_param">Задайте другое имя или другой адрес</string>
    <string name="list_empty">Список не загружен. Не найдены доступные сервера.</string>
    <string name="delete">Удалить</string>
    <string name="change">Изменить</string>
    <string name="reg_error">Ошибка регистрации на сервере! Сервер не отвечает.</string>
    <string name="save_params_error">Ошибка сохранения параметров! Сервер не отвечает.</string>
    <string name="alarms">Тревоги</string>
    <string name="not_registered">Не удалось зарегестрироваться для получения уведомлений. Сервис недоступен.</string>
    <string name="objects">Объекты</string>
    <string name="alarm_list_empty">Список тревог пуст. Нет объектов для фильтра</string>
    <string name="ti">Точки измерения</string>
    <string name="object">Объекты</string>
    <string name="balance">Балансы</string>
    <string name="formula">Формулы</string>
    <string name="slave61968">61968</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="is_confirm_selected">Вы точно хотите подтвердить выбранные тревоги?</string>
    <string name="is_confirm_all">Вы точно хотите подтвердить все тревоги?</string>
    <string name="version">Версия</string>
    <string name="TI">ТИ:</string>
    <string name="PS">ОБЪЕКТ:</string>
    <string name="formulaDict">ФОРМУЛА:</string>
    <string name="sBalancePath">БАЛАНС ПОДСТАНЦИИ:</string>
    <string name="slaveSystems">61968:</string>
    <string name="Telescope">Телескоп +</string>
    <string name="Alarms">Тревоги</string>
    <string name="copyright">Copyright \"НПФ Прорыв\", 2013г.</string>
    <string name="Search">Поиск</string>
    <string name="Refresh">Обновить</string>
    <string name="Object_filter">Фильтр объектов</string>
    <string name="Filter_for_request">Фильтр для запроса</string>
    <string name="Select_all">Выделить все</string>
    <string name="Confirm_selected">Подтвердить выделенные тревоги</string>
    <string name="Clear_selected">Очистить выделенное</string>
    <string name="Confirm_all">Подтвердить все тревоги пользователя</string>
    <string name="add_server">Добавить сервер</string>
    <string name="About">О программе</string>
    <string name="Save">Сохранить</string>
    <string name="Cancel">Отменить</string>
    <string name="port_not_correct">Не правильно указан порт</string>
</resources>
