<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="15dp"
        android:src="@drawable/about"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/ivCurrAlarmLevel"
        android:layout_gravity="center|top" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Telescope"
        android:textSize="24sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Alarms"
        android:id="@+id/textView2"
        android:textSize="19sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:textColor="@color/acsent_color" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Версия xx.xx"

        android:layout_marginBottom="30dp"
        android:id="@+id/tvVersion"
        android:textSize="15sp"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/copyright"
        android:textColor="@color/about_text_holo_light"
        android:id="@+id/textView3"
        android:textSize="14sp"
        android:layout_gravity="center"

        android:layout_marginBottom="5dp"/>
</LinearLayout>