<?xml version="1.0" encoding="utf-8"?>
<com.proryv.alarmnotification.common.DateTimeRangeDialog xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content">
    <LinearLayout
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <CheckBox
                android:layout_weight="0.5"
                android:text="@string/start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cbDateRangeStart"
                android:clickable="true"
                android:focusable="false"
                android:textSize="14sp"
                android:layout_marginLeft="10dp" />
        <CheckBox
                android:layout_weight="0.5"
                android:text="@string/finish"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cbDateRangeFinish"
                android:layout_marginLeft="8dp"
                android:checked="false"
                android:focusable="false"
                android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <EditText
                android:layout_weight="0.32"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:id="@+id/tvFilterStartDate"
                android:padding="5dp"
                android:editable="false"
                android:clickable="true"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:hint="@string/date_hint"
                android:singleLine="true"
                android:textSize="15sp"
                android:layout_marginLeft="4dp"
                android:textColor="@color/acsent_color"
                android:textColorHint="@color/hint_text_holo_light"
                android:inputType="date"/>
        <EditText
                android:layout_weight="0.18"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvFilterStartTime"
                android:padding="5dp"
                android:textColor="@color/acsent_color"
                android:editable="false"
                android:focusable="false"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:hint="@string/time_hint"
                android:singleLine="true"
                android:textSize="15sp"
                android:layout_marginRight="4dp"
                android:textColorHint="@color/hint_text_holo_light" />
        <EditText
                android:layout_weight="0.32"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvFilterFinishDate"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:textColor="@color/acsent_color"
                android:editable="false"
                android:clickable="true"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:hint="@string/date_hint"
                android:singleLine="true"
                android:textSize="15sp"
                android:textColorHint="@color/hint_text_holo_light"
                android:inputType="date"/>
        <EditText
                android:layout_weight="0.18"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvFilterFinishTime"
                android:padding="5dp"
                android:textColor="@color/acsent_color"
                android:editable="false"
                android:focusable="false"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:hint="@string/time_hint"
                android:singleLine="true"
                android:textSize="15sp"
                android:layout_marginRight="4dp"
                android:textColorHint="@color/hint_text_holo_light" />

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/ibSelectRange"
                android:src="@drawable/open"
                android:background="@android:color/transparent"
                android:padding="5dp"/>
    </LinearLayout>
</com.proryv.alarmnotification.common.DateTimeRangeDialog>